# AED2324_PRJ1_G1207

./: .gitignore  AuxiliarFunctions.cpp  AuxiliarFunctions.h  CMakeLists.txt  Class.h  CsvAndVectors.cpp  CsvAndVectors.h  Lesson.cpp  Lesson.h  README.md  Request.cpp  Request.h  Schedule.cpp  Schedule.h  Slot.h  Student.cpp  Student.h  UC.cpp  UC.h  Uc.h  main.cpp  main.txt  terminal.cpp
data/: requests.csv  students_classes.csv
docs/: Doxyfile
html/: _auxiliar_functions_8h.html  _auxiliar_functions_8h_source.html  _csv_and_vectors_8h.html  _csv_and_vectors_8h_source.html  _lesson_8h.html  _lesson_8h_source.html  _request_8h.html  _request_8h_source.html  _schedule_8h.html  _schedule_8h_source.html  _student_8h.html  _student_8h_source.html  _u_c_8h.html  _u_c_8h_source.html  annotated.html  class_auxiliar_functions-members.html  class_auxiliar_functions.html  class_csv_and_vectors-members.html  class_csv_and_vectors.html  class_lesson-members.html  class_lesson.html  class_request-members.html  class_request.html  class_schedule-members.html  class_schedule.html  class_student-members.html  class_student.html  class_u_c-members.html  class_u_c.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  menudata.js  (+1 more)
latex/: _auxiliar_functions_8h.tex  _auxiliar_functions_8h_source.tex  _csv_and_vectors_8h.tex  _csv_and_vectors_8h_source.tex  _lesson_8h.tex  _lesson_8h_source.tex  _request_8h.tex  _request_8h_source.tex  _schedule_8h.tex  _student_8h.tex  (+17 more)
(+47 files in other folders)
